--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Uma landing page sobre o filme: a viagem de chihiro",
   "main": "gulpfile.js",
+  "type": "module",
   "scripts": {
     "build": "gulp",
     "dev": "gulp watch",
@@ -14,6 +15,7 @@
     "gulp": "^4.0.2",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^5.1.0",
+    "gulp-terser": "^2.1.0",
     "gulp-watch": "^5.0.1",
     "sass": "^1.77.4"
   }
